--- a/languages/wp-extra-settings-ja.po
+++ b/languages/wp-extra-settings-ja.po
@@ -5,8 +5,8 @@ msgstr ""
 "Project-Id-Version: WP EXTRA SETTINGS 0.1.0\n"
 "Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/wp-extra-"
 "settings\n"
-"POT-Creation-Date: 2025-03-23T09:46:00+01:00\n"
-"PO-Revision-Date: 2025-03-23 18:02+0900\n"
+"POT-Creation-Date: 2025-03-28T11:47:28+01:00\n"
+"PO-Revision-Date: 2025-03-28 19:53+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
@@ -67,95 +67,99 @@ msgstr "セキュリティ"
 msgid "Save Settings"
 msgstr "設定を保存"
 
-#: vendor/itmar/wpsetting-class-package/src/ItmarModifyPost.php:104
+#: vendor/itmar/wpsetting-class-package/src/ItmarModifyPost.php:214
 msgid "Title"
 msgstr "タイトル"
 
-#: vendor/itmar/wpsetting-class-package/src/ItmarModifyPost.php:105
+#: vendor/itmar/wpsetting-class-package/src/ItmarModifyPost.php:215
 msgid "Editor"
-msgstr "編集者"
+msgstr "エディター"
 
-#: vendor/itmar/wpsetting-class-package/src/ItmarModifyPost.php:106
+#: vendor/itmar/wpsetting-class-package/src/ItmarModifyPost.php:216
 msgid "Author"
 msgstr "著者"
 
-#: vendor/itmar/wpsetting-class-package/src/ItmarModifyPost.php:107
+#: vendor/itmar/wpsetting-class-package/src/ItmarModifyPost.php:217
 msgid "Excerpt"
 msgstr "抜粋"
 
-#: vendor/itmar/wpsetting-class-package/src/ItmarModifyPost.php:108
-msgid "Trackbacks"
-msgstr "トラックバック"
+#: vendor/itmar/wpsetting-class-package/src/ItmarModifyPost.php:218
+msgid "Trackbacks(Deprecated)"
+msgstr "トラックバック（非推奨）"
 
-#: vendor/itmar/wpsetting-class-package/src/ItmarModifyPost.php:109
+#: vendor/itmar/wpsetting-class-package/src/ItmarModifyPost.php:219
 msgid "Custom Fields"
 msgstr "カスタムフィールド"
 
-#: vendor/itmar/wpsetting-class-package/src/ItmarModifyPost.php:110
+#: vendor/itmar/wpsetting-class-package/src/ItmarModifyPost.php:220
 msgid "Comments"
 msgstr "コメント"
 
-#: vendor/itmar/wpsetting-class-package/src/ItmarModifyPost.php:111
+#: vendor/itmar/wpsetting-class-package/src/ItmarModifyPost.php:221
 msgid "Revisions"
 msgstr "リビジョン"
 
-#: vendor/itmar/wpsetting-class-package/src/ItmarModifyPost.php:112
-msgid "Post Formats"
-msgstr "投稿フォーマット"
+#: vendor/itmar/wpsetting-class-package/src/ItmarModifyPost.php:222
+msgid "Post Formats(Deprecated)"
+msgstr "投稿フォーマット（非推奨）"
 
-#: vendor/itmar/wpsetting-class-package/src/ItmarModifyPost.php:113
+#: vendor/itmar/wpsetting-class-package/src/ItmarModifyPost.php:223
 msgid "Featured Image"
 msgstr "アイキャッチ画像"
 
-#: vendor/itmar/wpsetting-class-package/src/ItmarModifyPost.php:116
+#: vendor/itmar/wpsetting-class-package/src/ItmarModifyPost.php:240
 msgid "Modify Post Menu Settings"
 msgstr "投稿メニュー変更設定"
 
-#: vendor/itmar/wpsetting-class-package/src/ItmarModifyPost.php:119
+#: vendor/itmar/wpsetting-class-package/src/ItmarModifyPost.php:243
 msgid "Post Label Name"
 msgstr "投稿ラベル名"
 
-#: vendor/itmar/wpsetting-class-package/src/ItmarModifyPost.php:123
+#: vendor/itmar/wpsetting-class-package/src/ItmarModifyPost.php:247
 msgid "Enable Archive Page"
 msgstr "アーカイブページ使用"
 
-#: vendor/itmar/wpsetting-class-package/src/ItmarModifyPost.php:125
+#: vendor/itmar/wpsetting-class-package/src/ItmarModifyPost.php:249
 msgid "Enable archive"
 msgstr "アーカイブ使用可"
 
-#: vendor/itmar/wpsetting-class-package/src/ItmarModifyPost.php:129
+#: vendor/itmar/wpsetting-class-package/src/ItmarModifyPost.php:253
 msgid "Archive Slug"
 msgstr "アーカイブスラッグ"
 
-#: vendor/itmar/wpsetting-class-package/src/ItmarModifyPost.php:133
+#: vendor/itmar/wpsetting-class-package/src/ItmarModifyPost.php:257
 msgid "Post Supports"
 msgstr "投稿のサポート"
 
-#: vendor/itmar/wpsetting-class-package/src/ItmarRedirectControl.php:64
+#: vendor/itmar/wpsetting-class-package/src/ItmarRedirectControl.php:125
 msgid "Redirect Settings"
 msgstr "リダイレクト設定"
 
-#: vendor/itmar/wpsetting-class-package/src/ItmarRedirectControl.php:67
-msgid "Enable Redirect from Root to Subdirectory"
-msgstr "ルートからサブディレクトリへのリダイレクトを有効にする"
+#: vendor/itmar/wpsetting-class-package/src/ItmarRedirectControl.php:128
+msgid "Redirecting from the domain root URL"
+msgstr "ドメインルートURLからリダイレクト"
 
-#: vendor/itmar/wpsetting-class-package/src/ItmarRedirectControl.php:71
-msgid "Enable redirection from domain root URL to WordPress subdirectory."
+#: vendor/itmar/wpsetting-class-package/src/ItmarRedirectControl.php:132
+msgid "Redirect the domain root URL to this site"
 msgstr ""
-"ドメイン ルート URL から WordPress サブディレクトリへのリダイレクトを有効に"
+"ドメイン ルート URL からこのサイトのサブディレクトリへのリダイレクトを有効に"
 "します。"
 
-#: vendor/itmar/wpsetting-class-package/src/ItmarRedirectControl.php:76
-msgid "Target Subdirectory (Slug)"
-msgstr "ターゲットサブディレクトリ（スラッグ）"
-
-#: vendor/itmar/wpsetting-class-package/src/ItmarRedirectControl.php:79
+#: vendor/itmar/wpsetting-class-package/src/ItmarRedirectControl.php:134
 msgid ""
-"Example: If your WordPress is installed in https://example.com/home/, enter "
-"\"home\"."
+"If this site is installed on a subdomain, it will be accessible at the root "
+"domain URL."
 msgstr ""
-"例: WordPress が https://example.com/home/ にインストールされている場合は、"
-"「home」と入力します。"
+"このサイトがサブドメインにインストールされている場合は、ルートドメイン URL で"
+"アクセスできます。"
+
+#: vendor/itmar/wpsetting-class-package/src/ItmarRedirectControl.php:147
+msgid ""
+"Failed to create index.php. The file already exists or insufficient "
+"permissions. Please remove index.php manually if you want to enable redirect."
+msgstr ""
+"index.php の作成に失敗しました。ファイルが既に存在するか、権限が不十分です。"
+"リダイレクトを有効にする場合は、index.php を手動で削除してください。"
 
 #: vendor/itmar/wpsetting-class-package/src/ItmarRevisionClass.php:86
 msgid "Revision Settings"
@@ -232,79 +236,282 @@ msgstr ""
 "XML-RPC エンドポイントを無効にします (pingback、リモート公開などに使用されま"
 "す)。"
 
-#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:118
-msgid "SEO Settings"
-msgstr "SEO設定"
+#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:218
+msgid "OGP Settings"
+msgstr "OGP設定"
 
-#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:121
+#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:221
 msgid "Enable OGP Tags"
 msgstr "OGP タグを有効にする"
 
-#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:125
+#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:225
 msgid "Output OGP meta tags in &lt;head&gt; section"
 msgstr "<head> セクションに OGP メタタグを出力する"
 
-#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:130
+#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:230
 msgid "Site Name for OGP"
 msgstr "OGP のサイト名"
 
-#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:133
+#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:233
 msgid "If empty, the default site title will be used."
 msgstr "空の場合は、デフォルトのサイトタイトルが使用されます。"
 
-#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:137
+#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:237
 msgid "Default OGP Image URL"
 msgstr "デフォルトの OGP イメージ URL"
 
-#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:140
+#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:240
+#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:253
 msgid "Select Image"
 msgstr "画像を選択"
 
-#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:146
+#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:246
+#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:259
 msgid "Select an image from media library or input URL."
 msgstr "メディアライブラリから画像を選択するか、URLを入力します。"
 
-#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:150
+#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:250
+msgid "Square OGP Image URL"
+msgstr "正方形の OGP イメージ URL"
+
+#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:263
 msgid "Twitter Card Type"
 msgstr "Twitter カードタイプ"
 
-#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:156
+#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:269
 msgid "Select Twitter card type."
 msgstr "Twitter カードの種類を選択します。"
 
-#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:161
-msgid "Custom Header Code"
-msgstr "カスタムヘッダーコード"
+#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:275
+msgid "Google SEO Settings"
+msgstr "Google SEO設定"
 
-#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:176
-msgid "Insert meta tags, verification codes, or tracking scripts."
-msgstr "メタタグ、検証コード、またはトラッキング スクリプトを挿入します。"
+#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:278
+msgid "Google Search Console Setup"
+msgstr "Googleサーチコンソールセットアップ"
 
-#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:179
-msgid "Google Search Console:"
-msgstr "Google 検索コンソール:"
+#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:281
+msgid "Follow the steps below to connect your site with Google Search Console."
+msgstr "以下の手順にしたがって、サイトを Google Search Console に接続します。"
 
-#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:181
-#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:189
-msgid "Access here"
-msgstr "ここからアクセス"
+#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:286
+msgid "Open Google Search Console"
+msgstr "Googleサーチコンソールを開く"
 
-#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:184
-msgid "Go to property settings → Get verification HTML tag."
-msgstr "プロパティ設定に移動 → 検証 HTML タグを取得します。"
+#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:290
+msgid "Click 'Add Property' and choose one of the following types:"
+msgstr "「プロパティを追加」をクリックし、次のいずれかのタイプを選択します。"
 
-#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:187
-msgid "Google Analytics:"
+#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:292
+msgid ""
+"Verifies all subdomains and protocols via DNS (recommended). No further "
+"steps needed here."
+msgstr ""
+"DNS 経由ですべてのサブドメインとプロトコルを検証します (推奨)。これを選択すれ"
+"ばこの項目の設定は不要です。"
+
+#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:293
+msgid "Verifies a specific URL (e.g., https://example.com) via HTML tag."
+msgstr "HTML タグを介して特定の URL (例: https://example.com) を検証します。"
+
+#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:297
+msgid "Select the verification method you used:"
+msgstr "設定した検証方法を選択してください:"
+
+#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:301
+msgid "Domain (via DNS)"
+msgstr "ドメイン"
+
+#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:306
+msgid "URL Prefix (via HTML tag)"
+msgstr "URL プレフィックス"
+
+#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:313
+msgid "Paste the content value from the HTML tag:"
+msgstr "HTML タグからコンテンツの値を貼り付けます。"
+
+#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:317
+msgid "Use the following link to open the settings page:"
+msgstr "設定ページを開くには、次のリンクを使用します。"
+
+#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:319
+msgid ""
+"From there, go to 'Ownership verification' → 'HTML tag', and copy the "
+"content value from the tag."
+msgstr ""
+"そこから、「所有権の確認」→「HTML タグ」に進み、タグからコンテンツの値をコ"
+"ピーします。"
+
+#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:325
+msgid "Google Analytics (GA4) Setup"
+msgstr "Google アナリティクス（GA4）セットアップ"
+
+#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:327
+msgid "If you haven't set up Google Analytics yet, follow the steps below:"
+msgstr ""
+"Google アナリティクス をまだ設定していない場合は、次の手順に従ってください。"
+
+#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:332
+msgid "Google Analytics"
 msgstr "Google アナリティクス:"
 
-#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:192
-msgid "Admin → Data Streams → Web → Get tag code."
-msgstr "管理 → データ ストリーム → Web → タグ コードを取得。"
+#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:334
+#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:382
+msgid "and sign in with your Google account."
+msgstr "Google アカウントでログインします。"
 
-#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:196
-msgid "Show Example Codes"
-msgstr "サンプルコードを表示"
+#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:335
+msgid "If this is your first time, you'll see a button labeled"
+msgstr "初めての場合は、"
 
-#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:198
-msgid "Example:"
-msgstr "例:"
+#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:336
+msgid "Start Measuring"
+msgstr "測定を開始する"
+
+#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:337
+msgid "– click it to begin setup."
+msgstr "– クリックしてセットアップを開始"
+
+#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:340
+msgid ""
+"Create a new Analytics account. This is typically your organization or site "
+"name."
+msgstr ""
+"新しい アナリティクスアカウントを作成します。これは通常、組織名またはサイト名"
+"です。"
+
+#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:342
+msgid ""
+"Next, create a property (e.g., MyWebsite) and choose your time zone and "
+"currency."
+msgstr ""
+"次に、プロパティ (例: MyWebsite) を作成し、タイムゾーンと通貨を選択します。"
+
+#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:344
+msgid "See official setup guide"
+msgstr "公式セットアップガイドを見る"
+
+#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:348
+msgid "In the 'Data Streams' step, choose"
+msgstr "「データストリーム」ステップで、"
+
+#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:349
+msgid "and enter your site's URL and stream name."
+msgstr "サイトの URL とストリーム名を入力します。"
+
+#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:352
+msgid "After setup, your 'Measurement ID' will be shown in this format:"
+msgstr "セットアップ後、「測定 ID」は次の形式で表示されます。"
+
+#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:353
+msgid "– copy and paste it below."
+msgstr "– 以下にコピーして貼り付けてください。"
+
+#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:358
+msgid "Measurement ID"
+msgstr "測定 ID"
+
+#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:367
+msgid "Starts with 'G-', e.g. G-ABC123XYZ"
+msgstr "「G-」で始まる（例：G-ABC123XYZ）"
+
+#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:372
+msgid "Google Tag Manager (GTM)"
+msgstr "Google タグマネージャー (GTM)"
+
+#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:375
+msgid ""
+"To use Google Tag Manager for managing various tracking codes (Google "
+"Analytics, Ads, etc.), follow the steps below:"
+msgstr ""
+"Google タグ マネージャーを使用してさまざまなトラッキング コード (Google アナ"
+"リティクス、広告など) を管理するには、次の手順に従います。"
+
+#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:380
+msgid "Open Google Tag Manager"
+msgstr "Google タグ マネージャーを開く"
+
+#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:385
+msgid ""
+"Click 'Create Account', enter your company or site name, select your "
+"country, and choose 'Web' as the target platform."
+msgstr ""
+"「アカウントを作成」をクリックし、会社名またはサイト名を入力し、国を選択し"
+"て、ターゲット プラットフォームとして「Web」を選択します。"
+
+#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:388
+msgid "After setup, you’ll get a GTM Container ID that looks like"
+msgstr "設定後、次のようなGTMコンテナIDが取得できます。"
+
+#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:389
+msgid "Paste it below."
+msgstr "以下に貼り付けてください。"
+
+#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:394
+msgid "GTM Container ID"
+msgstr "GTM コンテナ ID"
+
+#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:402
+msgid "Example: GTM-ABC123X"
+msgstr "例: GTM-ABC123X"
+
+#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:409
+msgid ""
+"Also output the noscript GTM code after the opening &lt;body&gt; tag "
+"(recommended)"
+msgstr "開始の <body> タグの後に noscript GTM コードも出力します (推奨)"
+
+#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:414
+msgid "Noindex Settings by Page Type"
+msgstr "ページタイプ別Noindex 設定"
+
+#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:419
+msgid "Noindex on search result pages (?s=...)"
+msgstr "検索結果ページを noindex (?s=...)"
+
+#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:425
+msgid "Noindex on archive pages (category, tag, date)"
+msgstr "アーカイブページ（カテゴリ、タグ、日付）を Noindex"
+
+#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:431
+msgid "Noindex on 404 not found pages"
+msgstr "404 ページを noindex"
+
+#: vendor/itmar/wpsetting-class-package/src/ItmarSEOSettings.php:435
+msgid "Prevents selected types of pages from being indexed by search engines."
+msgstr ""
+"選択した種類のページが検索エンジンによってインデックスされないようにします。"
+
+#~ msgid "Custom Header Code"
+#~ msgstr "カスタムヘッダーコード"
+
+#~ msgid "Insert meta tags, verification codes, or tracking scripts."
+#~ msgstr "メタタグ、検証コード、またはトラッキング スクリプトを挿入します。"
+
+#~ msgid "Access here"
+#~ msgstr "ここからアクセス"
+
+#~ msgid "Go to property settings → Get verification HTML tag."
+#~ msgstr "プロパティ設定に移動 → 検証 HTML タグを取得します。"
+
+#~ msgid "Admin → Data Streams → Web → Get tag code."
+#~ msgstr "管理 → データ ストリーム → Web → タグ コードを取得。"
+
+#~ msgid "Show Example Codes"
+#~ msgstr "サンプルコードを表示"
+
+#~ msgid "Example:"
+#~ msgstr "例:"
+
+#~ msgid "Enable Redirect from Root to Subdirectory"
+#~ msgstr "ルートからサブディレクトリへのリダイレクトを有効にする"
+
+#~ msgid "Target Subdirectory (Slug)"
+#~ msgstr "ターゲットサブディレクトリ（スラッグ）"
+
+#~ msgid ""
+#~ "Example: If your WordPress is installed in https://example.com/home/, "
+#~ "enter \"home\"."
+#~ msgstr ""
+#~ "例: WordPress が https://example.com/home/ にインストールされている場合"
+#~ "は、「home」と入力します。"
